create abstract class validator

--- a/SimpleValidationFramework/SimpleValidation/SimpleValidation.csproj
+++ b/SimpleValidationFramework/SimpleValidation/SimpleValidation.csproj
@@ -40,7 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interfaces\ICustomValidationRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -48,6 +47,15 @@
       <Project>{f41b4197-68bc-479b-9cff-c542d329f546}</Project>
       <Name>WFPDemo</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Attributes\" />
+    <Folder Include="Exception\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Primary\" />
+    <Folder Include="Resources\" />
+    <Folder Include="Util\" />
+    <Folder Include="Validators\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
