--- a/SimpleValidationFramework/SimpleValidation/SimpleValidation.csproj
+++ b/SimpleValidationFramework/SimpleValidation/SimpleValidation.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validators\Validator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SimpleValidator\WFPDemo.csproj">
@@ -55,7 +56,6 @@
     <Folder Include="Primary\" />
     <Folder Include="Resources\" />
     <Folder Include="Util\" />
-    <Folder Include="Validators\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
