--- a/SimpleValidationFramework/SimpleValidation/SimpleValidation.csproj
+++ b/SimpleValidationFramework/SimpleValidation/SimpleValidation.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validators\RangeValidator.cs" />
     <Compile Include="Validators\Validator.cs" />
   </ItemGroup>
   <ItemGroup>
