--- a/SimpleValidationFramework/SimpleValidationLibrary/SimpleValidationLibrary.csproj
+++ b/SimpleValidationFramework/SimpleValidationLibrary/SimpleValidationLibrary.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Attributes\ValidatorAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\NotifyIssue.cs" />
     <Compile Include="Validators\RangeValidator.cs" />
     <Compile Include="Validators\RegexValidator.cs" />
     <Compile Include="Validators\Validator.cs" />
