--- a/SimpleValidationFramework/SimpleValidationLibrary/SimpleValidationLibrary.csproj
+++ b/SimpleValidationFramework/SimpleValidationLibrary/SimpleValidationLibrary.csproj
@@ -40,10 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\LengthValidatorAttribute.cs" />
+    <Compile Include="Attributes\NotEmptyValidatorAttribute.cs" />
     <Compile Include="Attributes\RegexValidatorAttribute.cs" />
     <Compile Include="Attributes\ValidatorAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\IObserver.cs" />
     <Compile Include="Util\NotifyIssue.cs" />
+    <Compile Include="Validators\LengthValidator.cs" />
+    <Compile Include="Validators\NotEmptyValidator.cs" />
     <Compile Include="Validators\RangeValidator.cs" />
     <Compile Include="Validators\RegexValidator.cs" />
     <Compile Include="Validators\Validator.cs" />
