--- a/SimpleValidationFramework/SimpleValidationLibrary/SimpleValidationLibrary.csproj
+++ b/SimpleValidationFramework/SimpleValidationLibrary/SimpleValidationLibrary.csproj
@@ -41,10 +41,14 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\CompareValidatorAttribute.cs" />
     <Compile Include="Attributes\CustomValidatorAttribute.cs" />
     <Compile Include="Attributes\NestedValidatorAttribute.cs" />
+    <Compile Include="Attributes\RangeValidatorAttribute.cs" />
     <Compile Include="Attributes\RegexValidatorAttribute.cs" />
+    <Compile Include="Attributes\RequiredValidatorAttribute.cs" />
     <Compile Include="Attributes\ValidatorAttribute.cs" />
+    <Compile Include="Exception\InvalidValidatorException.cs" />
     <Compile Include="Interfaces\ICustomValidationRule.cs" />
     <Compile Include="Primary\ValidatableBase.cs" />
     <Compile Include="Primary\ValidationManager.cs" />
@@ -54,12 +58,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DefaultErrorMessages.resx</DependentUpon>
     </Compile>
+    <Compile Include="Util\ComparableOperator.cs" />
+    <Compile Include="Util\ErrorBindingCarrier.cs" />
     <Compile Include="Util\NotifyIssue.cs" />
     <Compile Include="Util\TextBlockErrorBindingCarrier.cs" />
+    <Compile Include="Validators\CompareValidator.cs" />
     <Compile Include="Validators\CustomValidator.cs" />
     <Compile Include="Validators\NestedValidator.cs" />
     <Compile Include="Validators\RangeValidator.cs" />
     <Compile Include="Validators\RegexValidator.cs" />
+    <Compile Include="Validators\RequiredValidator.cs" />
     <Compile Include="Validators\Validator.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -68,5 +76,6 @@
       <LastGenOutput>DefaultErrorMessages.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
