--- a/SimpleValidationFramework/SimpleValidationLibrary/SimpleValidationLibrary.csproj
+++ b/SimpleValidationFramework/SimpleValidationLibrary/SimpleValidationLibrary.csproj
@@ -30,6 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -60,6 +62,7 @@
     </Compile>
     <Compile Include="Util\ComparableOperator.cs" />
     <Compile Include="Util\ErrorBindingCarrier.cs" />
+    <Compile Include="Util\IObserver.cs" />
     <Compile Include="Util\NotifyIssue.cs" />
     <Compile Include="Util\TextBlockErrorBindingCarrier.cs" />
     <Compile Include="Validators\CompareValidator.cs" />
